--- a/index.html
+++ b/index.html
@@ -211,10 +211,10 @@ function simulateCommunication() {
 Message: ${message}
 
 Numeric Before Encryption: ${numericBeforeEncryption}
-Signed Blocks: ${signed.join(', ')}
-Encrypted Blocks: ${encrypted.join(', ')}
-Decrypted Blocks: ${decrypted.join(', ')}
-Verified Blocks: ${verified.join(', ')}
+Signed Blocks: ${signed.join(' | ')}
+Encrypted Blocks: ${encrypted.join(' | ')}
+Decrypted Blocks: ${decrypted.join(' | ')}
+Verified Blocks: ${verified.join(' | ')}
 
 Decoded 2-digit Values: ${digits}
 Corresponding Letters: ${letters}
